config/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Inspection_Footprint_Primary__c</fullName>
        <label>Inspection Footprint - Primary</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Footprint__c</fullName>
        <label>Inspection Footprint</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Inspections_Up_To_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspections Up To Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lane_Notes__c</fullName>
        <label>Lane Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Notes__c</fullName>
        <label>Location Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business with dock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business without dock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Locations</label>
        <picklist>
            <picklistValues>
                <fullName>REGION: WEST COAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: MOUNTAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: SOUTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: PLAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: TEXAS+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oklahoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Status__c</fullName>
        <label>Monitoring Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Monitored</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Start Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Being Monitored</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outbound_Notes__c</fullName>
        <label>Outbound Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outbound_States__c</fullName>
        <label>Outbound States</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partial_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Carrier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Truckload_Shipments_Per_Year__c</fullName>
        <label>Partial Truckload Shipments Per Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pickup_Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Appointment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pickup_Location__c</fullName>
        <label>Pickup Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualification Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Outreach_Begun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualification Outreach Begun?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quoting_and_Booking_Instructions__c</fullName>
        <label>Quoting and Booking Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SMS_Contr_Subst_Basic_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value indicates whether the SMSCONTRSUBSTPCT score is over the threshold and/or if there are serious violations for controlled substances within the past 12 months. If value is &quot;Y&quot; the carrier has a BASIC alert for the &quot;Controlled Substances / Alcohol&quot; category</description>
        <inlineHelpText>This value indicates whether the SMSCONTRSUBSTPCT score is over the threshold and/or if there are serious violations for controlled substances within the past 12 months</inlineHelpText>
        <label>SMS Contr Subst Basic Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Contr_Subst_Perct__c</fullName>
        <description>This value is the controlled substances and alcohol BASIC roadside performance percentile (SMS BASIC score for Controlled Substances / Alcohol). Numeric values range from 0 to 100. Scores may have one decimal place, such as 85.4.</description>
        <label>SMS Contr Subst Perct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Contr_Subst_Road_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Contr Subst Road Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Contr_Subst_Serious_Viol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Contr Subst  Serious Viol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Driver_Fit_Basic_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Driver Fit Basic Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Driver_Fit_Perct__c</fullName>
        <description>This value is the driver fitness BASIC roadside performance percentile (SMS BASIC score for Driver Fitness). Numeric values range from 0 to 100. Scores may have one decimal place, such as 85.4.</description>
        <label>SMS Driver Fit Perct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Driver_Fit_Road_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Driver Fit Road Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Driver_Fit_Serious_Viol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Driver Fit Serious Viol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Driver_Inspections_Total__c</fullName>
        <label>SMS Driver Inspections Total</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Driver_OOS_Inspections__c</fullName>
        <description>Number of driver inspections with at least one driver out-of-service violation.</description>
        <inlineHelpText>Number of driver inspections with at least one driver out-of-service violation.</inlineHelpText>
        <label>SMS Driver OOS Inspections</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Fatigue_Driver_Basic_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Fatigue Driver Basic Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Fatigue_Driver_Perct__c</fullName>
        <label>SMS Fatigue Driver Perct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Fatigue_Driver_Road_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Fatigue Driver Road Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Fatigue_Driver_Serious_Viol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Fatigue Driver Serious Viol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Inspections_Total__c</fullName>
        <description>Total number of inspections for the 24-month measurement period.</description>
        <inlineHelpText>Total number of inspections for the 24-month measurement period.</inlineHelpText>
        <label>SMS Inspections Total</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Unsafe_Driver_Basic_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: &quot;Y&quot; for yes or &quot;N&quot; for no. This value indicates whether the SMSUNSAFEDRIVPCT score is over the threshold and/or if there are serious violations for unsafe driving within the past 12 months. If value is &quot;Y&quot; the carrier has a BASIC alert for the &quot;Unsafe Driving&quot; category.</description>
        <label>SMS Unsafe Driver Basic Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Unsafe_Driver_Perct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SMS Unsafe Driver Perct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Unsafe_Driver_Road_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: &quot;Y&quot; for yes or &quot;N&quot; for no. This value indicates whether the SMSUNSAFEDRIVPCT score is over the threshold.</description>
        <label>SMS Unsafe Driver Road Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Unsafe_Driver_Serious_Viol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Unsafe Driver Serious Viol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Vehicle_Inspections__c</fullName>
        <description>Number of vehicle inspections.</description>
        <inlineHelpText>Number of vehicle inspections.</inlineHelpText>
        <label>SMS Vehicle Inspections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Vehicle_Maint_Basic_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Vehicle Maint Basic Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Vehicle_Maint_Perct__c</fullName>
        <label>SMS Vehicle Maint Perct</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMS_Vehicle_Maint_Road_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Vehicle Maint Road Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Vehicle_Maint_Serious_Viol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Vehicle Maint Serious Viol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Vehicle_OOS_Inspections__c</fullName>
        <label>SMS Vehicle OOS Inspections</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safety_Rate_Date__c</fullName>
        <description>If the carrier has a carrier safety rating value specifies in SAFETYRATING, this is the date the safety rating was issued formatted as mm/dd/yyyy</description>
        <inlineHelpText>Date the safety rating was issued.</inlineHelpText>
        <label>Safety Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safety_Rating__c</fullName>
        <label>Safety Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Safety_Review_Date__c</fullName>
        <label>Safety Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safety_Review_Type__c</fullName>
        <label>Safety Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>C = Compliance Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N = Non-Ratable Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S = Safety Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E = Educational Contact Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U = Historical Audit Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G = Compliance Review and CTFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H = Shipper Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A = Safety Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B = Automatic Safety Assessment Program Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F = CTFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I = Carrier Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J = Compliance Review and Security Contact Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seed_Lead_Billto_Shipments__c</fullName>
        <label>Seed Lead: Billto Shipments</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seed_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>Seed Lead ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seed_Lead_Inbound_Partial_Shipments__c</fullName>
        <label>Seed Lead: Inbound Partial Shipments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seed_Lead_Inbound_Shipments__c</fullName>
        <label>Seed Lead: Inbound Shipments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seed_Lead_Outbound_Partial_Shipments__c</fullName>
        <label>Seed Lead: Outbound Partial Shipments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seed_Lead_Outbound_Shipments__c</fullName>
        <label>Seed Lead: Outbound Shipments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seed_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seed Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipmentTypes__c</fullName>
        <label>Shipment Types</label>
        <picklist>
            <picklistValues>
                <fullName>TL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Shipper_Regions__c</fullName>
        <label>Shipper Regions</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midatlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Carrier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tractors__c</fullName>
        <label>Tractors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USDOT__c</fullName>
        <externalId>true</externalId>
        <label>USDOT</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W9__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W9?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Password__c</fullName>
        <label>Website Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Username__c</fullName>
        <label>Website Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Additional_Information__c</fullName>
        <formula>&quot;    &quot;&amp;
HYPERLINK(&quot;http://www.jigsaw.com/SearchCompany.xhtml?opCode=search&amp;orderby=0&amp;order=0&amp;companyIds=&quot;&amp;jigsaw_clean__Jigsaw_Id__c&amp;&quot;&amp;showAdvancedSearch=true&amp;cmDead=on&amp;search=Search&quot;,IMAGE(&quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=015800000017aw7&amp;oid=00D80000000ZkKz&quot;,&quot;Jigsaw Search&quot;,20,24))
&amp;&quot;    &quot;&amp;
HYPERLINK(&quot;http://www.jigsaw.com/CompanyFamilyTree.xhtml?companyId=&quot;&amp; jigsaw_clean__Jigsaw_Id__c &amp;&quot;&amp;opCode=showFamilyTree&quot;,IMAGE(&quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=015800000017ax0&amp;oid=00D80000000ZkKz&quot;,&quot;Company Org Chart&quot;,20,26),&quot;_blank&quot;)
&amp;&quot;    &quot;&amp;
HYPERLINK(&quot;http://www.google.com/#hl=en&amp;source=hp&amp;q=&quot;&amp; Name , IMAGE(&quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=015800000017aw2&amp;oid=00D80000000ZkKz&quot;,&quot;Google Search&quot;,20,20))
&amp;&quot;           &quot;&amp;
HYPERLINK(&quot;http://blogsearch.google.com/blogsearch?q=&quot;&amp;Name,IMAGE(&quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000zkS7&amp;oid=00D80000000ZkKz&quot;,&quot;Blog Search&quot;,20,20))</formula>
        <label>Additional Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jigsaw_clean__Automatic_Updates_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>